package br.com.mecaniQA.api.model;

public enum CategoriaPeca {
    MOTOR,
    SUSPENSAO,
    FREIOS,
    ELETRICA,
    ACESSORIOS
}
