@startuml
skinparam backgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam roundcorner 4
skinparam shadowing false

skinparam class {
    BackgroundColor #FAFAFA
    ArrowColor #1E293B
    BorderColor #334155
    FontName Arial
    FontSize 11
    AttributeFontSize 10
}

left to right direction

enum CategoriaPeca {
    + MOTOR
    + SUSPENSAO
    + FREIOS
    + ELETRICA
    + ACESSORIOS
}

class Peca {
    - Long codigo
    - String codigoBarras
    - String fornecedorMarca
    - Integer quantidadeEstoque
    - Double precoCusto
    - Double precoVenda
    - LocalDateTime dataCadastro
    - LocalDateTime dataAtualizacao
    - String tamanho
    - String cor
    - CategoriaPeca categoria
    --
    + Peca()
    + getCodigo() : Long
    + setCodigo(Long) : void
    + getCodigoBarras() : String
    + setCodigoBarras(String) : void
    + getFornecedorMarca() : String
    + setFornecedorMarca(String) : void
    + getQuantidadeEstoque() : Integer
    + setQuantidadeEstoque(Integer) : void
    + getPrecoCusto() : Double
    + setPrecoCusto(Double) : void
    + getPrecoVenda() : Double
    + setPrecoVenda(Double) : void
    + getDataCadastro() : LocalDateTime
    + setDataCadastro(LocalDateTime) : void
    + getDataAtualizacao() : LocalDateTime
    + setDataAtualizacao(LocalDateTime) : void
    + getTamanho() : String
    + setTamanho(String) : void
    + getCor() : String
    + setCor(String) : void
    + getCategoria() : CategoriaPeca
    + setCategoria(CategoriaPeca) : void
}

class PecaRequestDTO {
    - String codigoBarras
    - String fornecedorMarca
    - Integer quantidadeEstoque
    - Double precoCusto
    - Double precoVenda
    - String tamanho
    - String cor
    - CategoriaPeca categoria
    --
    + PecaRequestDTO()
    + getCodigoBarras() : String
    + setCodigoBarras(String) : void
    + getFornecedorMarca() : String
    + setFornecedorMarca(String) : void
    + getQuantidadeEstoque() : Integer
    + setQuantidadeEstoque(Integer) : void
    + getPrecoCusto() : Double
    + setPrecoCusto(Double) : void
    + getPrecoVenda() : Double
    + setPrecoVenda(Double) : void
    + getTamanho() : String
    + setTamanho(String) : void
    + getCor() : String
    + setCor(String) : void
    + getCategoria() : CategoriaPeca
    + setCategoria(CategoriaPeca) : void
}

class PecaRepository <<Singleton>> {
    - {static} PecaRepository INSTANCE
    - List<Peca> pecas
    - Long proximoCodigo
    --
    - PecaRepository()
    + {static} getInstance() : PecaRepository
    + salvar(PecaRequestDTO) : Peca
    + listarTodos() : List<Peca>
    + buscarPorCodigo(Long) : Optional<Peca>
    + atualizar(Long, PecaRequestDTO) : Optional<Peca>
    + excluir(Long) : boolean
}

class PecaController {
    - PecaRepository pecaRepository
    --
    + PecaController()
    + cadastrar(PecaRequestDTO) : ResponseEntity<Peca>
    + listar() : ResponseEntity<List<Peca>>
    + buscarPorCodigo(Long) : ResponseEntity<Peca>
    + atualizar(Long, PecaRequestDTO) : ResponseEntity<Peca>
    + excluir(Long) : ResponseEntity<Void>
}

class Servico {
    - Long codigo
    - String nome
    - Integer tempoEstimadoMinutos
    - Double custoTabelado
    - LocalDateTime dataCriacao
    - LocalDateTime dataAtualizacao
    --
    + Servico()
    + getCodigo() : Long
    + setCodigo(Long) : void
    + getNome() : String
    + setNome(String) : void
    + getTempoEstimadoMinutos() : Integer
    + setTempoEstimadoMinutos(Integer) : void
    + getCustoTabelado() : Double
    + setCustoTabelado(Double) : void
    + getDataCriacao() : LocalDateTime
    + setDataCriacao(LocalDateTime) : void
    + getDataAtualizacao() : LocalDateTime
    + setDataAtualizacao(LocalDateTime) : void
}

class ServicoRequestDTO {
    - String nome
    - Integer tempoEstimadoMinutos
    - Double custoTabelado
    --
    + ServicoRequestDTO()
    + getNome() : String
    + setNome(String) : void
    + getTempoEstimadoMinutos() : Integer
    + setTempoEstimadoMinutos(Integer) : void
    + getCustoTabelado() : Double
    + setCustoTabelado(Double) : void
}

class ServicoRepository <<Singleton>> {
    - {static} ServicoRepository INSTANCE
    - List<Servico> servicos
    - Long proximoCodigo
    --
    - ServicoRepository()
    + {static} getInstance() : ServicoRepository
    + salvar(ServicoRequestDTO) : Servico
    + listarTodos() : List<Servico>
    + buscarPorCodigo(Long) : Optional<Servico>
    + atualizar(Long, ServicoRequestDTO) : Optional<Servico>
    + excluir(Long) : boolean
}

class ServicoController {
    - ServicoRepository servicoRepository
    --
    + ServicoController()
    + cadastrar(ServicoRequestDTO) : ResponseEntity<Servico>
    + listar() : ResponseEntity<List<Servico>>
    + buscarPorCodigo(Long) : ResponseEntity<Servico>
    + atualizar(Long, ServicoRequestDTO) : ResponseEntity<Servico>
    + excluir(Long) : ResponseEntity<Void>
}

PecaController ..> PecaRepository : getInstance()
PecaController ..> PecaRequestDTO : recebe
PecaRepository --> Peca : armazena
Peca --> CategoriaPeca : possui
PecaRequestDTO --> CategoriaPeca : possui

ServicoController ..> ServicoRepository : getInstance()
ServicoController ..> ServicoRequestDTO : recebe
ServicoRepository --> Servico : armazena
@enduml
